--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # site settings
-title: Developmental Patterning in Microbiology
+title: Chiou Lab
 subtitle: Discover the patterns of life
 email: jchiou@gate.sinica.edu.tw
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: # the subpath of your site, e.g. /blog
-url: https://jiangengchioulab.github.io # the base hostname & protocol for your site
-author:
-street_address: 1234 Somewhere Road
-city: Nashville
-state: TN
-zip_code: 55555
-country: United States of America
-phone: (716) 555-5555
+url: # the base hostname & protocol for your site
+author:  Jian-geng Chiou
+street_address: R402, IPMB, Academia Sinica No. 128, Section 2, Academia Rd
+city: Nangang District
+state: Taipei City
+zip_code: 115
+country: Taiwan
+phone: +886-2-27871113
 
 # homepage tiles
 tiles-source: pages # accepts "posts" or "pages"
