--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Chiou Lab
 subtitle: Patterning Principles in Microbiology
 email: jchiou@gate.sinica.edu.tw
 welcoming: Discover the patterns of life.
-description: Now recruiting at all positions!
+description: Now recruiting <br />cell biologists <br />microbiologists <br /> physicists <br />at all positions!
 baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:  Jian-geng Chiou
