fixed 'join us' buttons, people layout, and recruitment messages

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Chiou Lab
 subtitle: Patterning Principles in Microbiology
 email: jchiou@gate.sinica.edu.tw
-welcoming: Discover the patterns of life.
-description: Now recruiting <br />cell biologists <br />microbiologists <br /> physicists <br />at all positions!
+welcoming: Discover the patterns in life.
+description: Now recruiting at all positions!
 baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:  Jian-geng Chiou
