--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: Patterning Principles in Microbiology
 email: jchiou@gate.sinica.edu.tw
 welcoming: Discover the patterns in life.
 description: Now recruiting at all positions!
-baseurl: https://jchioulab.github.io/ # the subpath of your site, e.g. /blog
+baseurl: # the subpath of your site, e.g. /blog
 url: # the base hostname & protocol for your site
 author:  Jian-geng Chiou
 street_address: R402, IPMB, Academia Sinica No. 128, Section 2, Academia Rd
